--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,4 +16,15 @@ install:
 build_script:
   - cd client && python setup.py test && cd ..
   - make -C server/tests/ check
-  - cd tests-functionnal && nosetests && cd ..
+  - cd tests-functionnal
+  # run tests multiple times to also catch sporadic errors
+  - nosetests
+  - nosetests
+  - nosetests
+  - nosetests
+  - nosetests
+  - nosetests
+  - nosetests
+  - nosetests
+  - nosetests
+  - nosetests
